--- a/configs/camels_us/CAMELS_US.yml
+++ b/configs/camels_us/CAMELS_US.yml
@@ -3,7 +3,7 @@
 # CAMELS文件夹的路径
 #camels_root_path: /home/cmajorchords/data/camels_us
 #camels_root_path: D:/data/camels_us
-camels_root_path: /home/gzz/方正/data/CAMELS_US
+camels_root_path: C:\Users\18313\Data\camels
 
 # 静态属性文件种类
 attributes_type_name:
