--- a/configs/camels_us_hourly/CAMELS_HOURLY.yml
+++ b/configs/camels_us_hourly/CAMELS_HOURLY.yml
@@ -1,4 +1,4 @@
 # --- CAMELS US HOURLY configurations ---
 
 # CAMELS文件夹的路径
-camels_us_hourly_root_path: /home/gzz/方正/data/CAMELS_US_HOURLY
+camels_us_hourly_root_path: C:\Users\18313\Data\camels_hourly
