--- a/configs/yml/Stacked-Forecast-LSTM.yml
+++ b/configs/yml/Stacked-Forecast-LSTM.yml
@@ -58,7 +58,7 @@ statics_embedding:
     - 30
     - 20
     - 64
-  # activation function of embedding network
+  # normalization function of embedding network
   activation: tanh
   # dropout applied to embedding network
   dropout: 0.0
